add context and logo

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,6 +26,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
+      "@assets/*": ["src/assets/*"],
+      "@context/*": ["src/context/*"],
       "@pages/*": ["src/pages/*"],
       "@layouts/*": ["src/layouts/*"],
       "@components/*": ["src/components/*"],
